Fix: vertical align of th and td to middle

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@
 }
 
 td {
-  vertical-align: center;
+  vertical-align: middle;
 }
 
 .table thead th {
